--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="about.html">
+  <link rel="stylesheet" href="portfolio.html">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="java.js">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My Website</title>
 </head>
 <body>
-  
+  <Header>
+    <h1 class="Main Head">Welcome to MY website!</h1>
+  </Header>
+
+
+
 </body>
 </html>
