--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="Main Head">Welcome to MY website!</h1>
     </header>
     <nav>
-      <a href="about.html" class="About-Link">About</a>
-      <a href="portfolio.html" class="Portfolio-Link">Portfolio</a>
+      <button><a href="portfolio.html" class="Portfolio-Button">Portfolio</a></button>
+      <button><a href="about.html" class="About-Button">About</a></button>
     </nav>
   </body>
 </html>
