--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website</title>
+  </head>
+  <body class="body">
+    <header>
+      <h1 class="Main Head">Sawyer Noland</h1>
+    </header>
+    <nav>
+      <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
+      <a href="about.html" class="About-Button">About</a>
+      <div class="holy-grail">
+        <section class="holy-grail-main">
+          <p>Main Content</p>
+          <div class="side-bar">
+            <p>side-bar</p>
+          </div>
+          <div class="side-bar2">
+            <p>side-bar2</p>
+          </div>
+        </section>
+        <footer>
+          &copy;2023 All Rights Reserved-Sawyer Noland
+        </footer>
+      </div>
+    </nav>
+  </body>
+</html>
 
