--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body">
     <header>
-      <h1 class="Main Head">Sawyer Noland</h1>
+      <h1 class="Name">Sawyer Noland</h1>
     </header>
     <nav>
       <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
