--- a/index.html
+++ b/index.html
@@ -7,25 +7,22 @@
     <title>My Website</title>
   </head>
   <body class="body">
-    <header>
+    <header class="nav">
       <h1 class="Name">Sawyer Noland</h1>
-    </header>
       <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
       <a href="about.html" class="About-Button">About</a>
-      <div class="holy-grail">
-        <section class="holy-grail-main">
-          <p>Main Content</p>
-          <div class="side-bar">
-            <p>side-bar</p>
-          </div>
-          <div class="side-bar2">
-            <p>side-bar2</p>
-          </div>
-        </section>
-        <footer>
-          &copy;2023 All Rights Reserved-Sawyer Noland
-        </footer>
-      </div>
+    </header>
+    <div class="holy-grail">
+      <section class="holy-grail-main">
+        <p>Main Content</p>
+        <div class="side-bar">
+          <p>side-bar</p>
+        </div>
+        <div class="side-bar2">
+          <p>side-bar2</p>
+        </div>
+      </section>
+      <footer>&copy;2023 All Rights Reserved-Sawyer Noland</footer>
+    </div>
   </body>
 </html>
-
