--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
   <body class="body">
     <header class="nav">
       <h1 class="Name">Sawyer Noland</h1>
-      <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
-      <a href="about.html" class="About-Button">About</a>
+      <div class="links">
+        <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
+        <a href="about.html" class="About-Button">About</a>
+      </div>
     </header>
     <div class="holy-grail">
       <section class="holy-grail-main">
         <p>Main Content</p>
         <div class="side-bar">
-          <p>side-bar</p>
+          <p>side-bar1</p>
         </div>
         <div class="side-bar2">
           <p>side-bar2</p>
         </div>
       </section>
-      <footer>&copy;2023 All Rights Reserved-Sawyer Noland</footer>
+      <footer>&copy;2023 Procrastinated</footer>
     </div>
   </body>
 </html>
