--- a/about.html
+++ b/about.html
@@ -16,8 +16,10 @@
     </header>
     <div class="First-ab">
       <h2 class="BA">About Me</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis officiis facere voluptates odit excepturi possimus quaerat. Asperiores sapiente odio repudiandae a eius modi veniam ipsum commodi expedita! Consectetur, eos autem!</p>
+      <section class="flex-first">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis officiis facere voluptates odit excepturi possimus quaerat. Asperiores sapiente odio repudiandae a eius modi veniam ipsum commodi expedita! Consectetur, eos autem!</p>
       <img class="mash" src="mash.jpg" alt="mash">
+    </section>
     </div>
     <div class="Scnd-ab">
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi officia suscipit, eum quasi minus delectus, expedita, ipsum facere itaque veniam quidem. Vitae earum asperiores eum enim at libero ratione iusto!</p>
