--- a/about.html
+++ b/about.html
@@ -10,18 +10,24 @@
     <header class="nav">
       <h1 class="Name">Sawyer Noland</h1>
       <div class="links">
-        <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
         <a href="index.html" class="Index-Button">Home</a>
+        <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
       </div>
     </header>
     <div class="First-ab">
       <h2 class="BA">About Me</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis officiis facere voluptates odit excepturi possimus quaerat. Asperiores sapiente odio repudiandae a eius modi veniam ipsum commodi expedita! Consectetur, eos autem!</p>
-      <img class="mash" src="mash.jpg" alt="mash">
+      <section class="mashncar">
+      <p class="first-ab-p">
+        Hello! Welcome to my about me page!  I'm an 18 year old fresh out of highschool and I've always had a passion for computer and tech related things. Since a little kid Christmas and Birthday gifts like puzzles and tech accessories were very common. I built my own PC which I love to play games with my friends on, I've had it for close to 5 years now and continue to upgrade it and keep it running smooth. I have a fluffy black cat named Mash who's a little over 7 now and a tarantula, who my sister named Elizabeth; who's around 5-6.
+      </p>
+      <img class="mash" src="/media/mash.jpg" alt="mash" />
+    </section>
     </div>
-    <div class="Scnd-ab">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi officia suscipit, eum quasi minus delectus, expedita, ipsum facere itaque veniam quidem. Vitae earum asperiores eum enim at libero ratione iusto!</p>
-      <video autoplay muted loop class="car" src="carro.mp4"></video>
+    <div>
+      <p class="Scnd-ab">
+        When I'm not playing games or out with friends I'm working on my car. Since getting my license, cars have become a HUGE passion of mine and something I've grown to love (for the most part). Since 16 I've had 4 cars, project after project. April of this year I traded my 1993 Mazda Miata for my now 1990 Acura Integra. I've redone the majority of the suspension, interior, and now im onto the exterior. I love this car and cant wait to finish it.
+      </p>
+      <video autoplay muted loop class="car" src="/media/carro.mp4"></video>
     </div>
   </body>
 </html>
