--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </section>
     </div>
     <div class="Scnd-ab">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi officia suscipit, eum quasi minus delectus, expedita, ipsum facere itaque veniam quidem. Vitae earum asperiores eum enim at libero ratione iusto!</p>
+      <p>When I'm not playing games or out with friends I'm working on my car. Since getting my license, cars have become a HUGE passion of mine and something I've grown to love (for the most part). Since 16 I've had 4 cars, project after project. April of this year I traded my 1993 Mazda Miata for my now 1990 Acura Integra. I've redone the majority of the suspension, interior, and now im onto the exterior. I love this car and cant wait to finish it.</p>
       <video autoplay muted loop class="car" src="carro.mp4"></video>
     </div>
   </body>
