Home page final

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
       </div>
     </header>
     <div class="holy-grail">
+      <!-- DECIDE IF YOU WANNA KEEP OR GET RID OF MAIN CONTENT OR HOME. DON'T HAVE BOTH IT LOOKS CROWDED -->
+      <h2 class="BA">Home</h2>
       <section class="holy-grail-main">
-        <p>Main Content</p>
+        <!-- ADD MORE TO MAIN CONTENT, DON'T LEAVE LIKE THAT -->
+        <p class="MC">Main Content</p>
         <div class="side-bar">
-          <p>side-bar1</p>
+          <!-- KEEP A SIDE BAR AS A REAL SIDE BAR AND PUT IT TO THE SIDE WITH BOUNDARIES -->
+          <p>side-bar1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quo odio ut, natus eveniet veritatis possimus quisquam vitae nemo numquam praesentium enim amet at, dolore eligendi. Iusto quae ducimus numquam!</p>
         </div>
         <div class="side-bar2">
-          <p>side-bar2</p>
+          <p>side-bar2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores facere aspernatur, ullam rerum laboriosam dolore. Veritatis reprehenderit quos mollitia eligendi quidem. Voluptate in autem veniam molestiae non quae deserunt.</p>
         </div>
       </section>
-      <footer>&copy;2023 Procrastinated</footer>
+      <footer class="footer">&copy;2023 Procrastinated</footer>
     </div>
   </body>
 </html>
