--- a/success.html
+++ b/success.html
@@ -8,11 +8,13 @@
   </head>
   <body class="body">
     <header class="nav">
-      <h1 class="Name">Sawyer Noland</h1>
+      <h1 class="Name"><a href="index.html" class="Index-Button">Sawyer Noland</a></h1>
+      <!-- <h1 class="Name">Sawyer Noland</h1> -->
       <div class="links">
-        <a href="index.html" class="Index-Button">Home</a>
+        <!-- <a href="index.html" class="Index-Button">Home</a> -->
         <a href="about.html" class="About-Button">About</a>
         <a href="portfolio.html" class="Portfolio-Button">Portfolio</a>
+        <a href="contact.html" class="About-Button">Contact</a>
       </div>
     </header>
     <div class="ty">
